-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 9, 10, 11, 12
-
Component/s: hotspot
-
b09
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8227514 | 11.0.6-oracle | Tobias Hartmann | P3 | Resolved | Fixed | b01 |
| JDK-8230474 | 11.0.6 | Tobias Hartmann | P3 | Resolved | Fixed | b01 |
# Internal Error (/oracle/jdk11/open/src/hotspot/share/opto/graphKit.cpp:242), pid=14199, tid=14210
# assert(ex_map->jvms()->same_calls_as(_exceptions->jvms())) failed: all collected exceptions must come from the same place
Current CompileTask:
C2: 9166 30 !b 4 Test::test2 (15 bytes)
Stack: [0x00007fe69afa6000,0x00007fe69b0a7000], sp=0x00007fe69b0a2380, free space=1008k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x1a07297] VMError::report_and_die(int, char const*, char const*, __va_list_tag*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x187
V [libjvm.so+0x1a082ff] VMError::report_and_die(Thread*, void*, char const*, int, char const*, char const*, __va_list_tag*)+0x2f
V [libjvm.so+0xc296ba] report_vm_error(char const*, int, char const*, char const*, ...)+0x12a
V [libjvm.so+0xee0973] GraphKit::add_exception_state(SafePointNode*)+0x303
V [libjvm.so+0xee0ac3] GraphKit::add_exception_states_from(JVMState*)+0x53
V [libjvm.so+0x93911b] PredictedCallGenerator::generate(JVMState*)+0x1bb
V [libjvm.so+0xd3100a] Parse::do_call()+0x50a
V [libjvm.so+0x169fddb] Parse::do_one_bytecode()+0x58b
V [libjvm.so+0x169085a] Parse::do_one_block()+0x39a
V [libjvm.so+0x16913d5] Parse::do_all_blocks()+0x1a5
V [libjvm.so+0x1694afa] Parse::Parse(JVMState*, ciMethod*, float)+0xd0a
V [libjvm.so+0x933fbc] ParseGenerator::generate(JVMState*)+0x1fc
V [libjvm.so+0x9390fd] PredictedCallGenerator::generate(JVMState*)+0x19d
V [libjvm.so+0xd3100a] Parse::do_call()+0x50a
V [libjvm.so+0x169fddb] Parse::do_one_bytecode()+0x58b
V [libjvm.so+0x169085a] Parse::do_one_block()+0x39a
V [libjvm.so+0x16913d5] Parse::do_all_blocks()+0x1a5
V [libjvm.so+0x1694afa] Parse::Parse(JVMState*, ciMethod*, float)+0xd0a
V [libjvm.so+0x933fbc] ParseGenerator::generate(JVMState*)+0x1fc
V [libjvm.so+0x9390fd] PredictedCallGenerator::generate(JVMState*)+0x19d
V [libjvm.so+0xd3100a] Parse::do_call()+0x50a
V [libjvm.so+0x169fddb] Parse::do_one_bytecode()+0x58b
V [libjvm.so+0x169085a] Parse::do_one_block()+0x39a
V [libjvm.so+0x16913d5] Parse::do_all_blocks()+0x1a5
V [libjvm.so+0x1694afa] Parse::Parse(JVMState*, ciMethod*, float)+0xd0a
V [libjvm.so+0x933fbc] ParseGenerator::generate(JVMState*)+0x1fc
V [libjvm.so+0xd3100a] Parse::do_call()+0x50a
V [libjvm.so+0x169fddb] Parse::do_one_bytecode()+0x58b
V [libjvm.so+0x169085a] Parse::do_one_block()+0x39a
V [libjvm.so+0x16913d5] Parse::do_all_blocks()+0x1a5
V [libjvm.so+0x1694afa] Parse::Parse(JVMState*, ciMethod*, float)+0xd0a
V [libjvm.so+0x933fbc] ParseGenerator::generate(JVMState*)+0x1fc
V [libjvm.so+0xb420df] Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool, bool, DirectiveSet*)+0x100f
V [libjvm.so+0x932342] C2Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0x302
V [libjvm.so+0xb4f8e0] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x3c0
V [libjvm.so+0xb505c9] CompileBroker::compiler_thread_loop()+0x269
V [libjvm.so+0x1948867] JavaThread::thread_main_inner()+0x287
V [libjvm.so+0x1948ac1] JavaThread::run()+0x191
# assert(ex_map->jvms()->same_calls_as(_exceptions->jvms())) failed: all collected exceptions must come from the same place
Current CompileTask:
C2: 9166 30 !b 4 Test::test2 (15 bytes)
Stack: [0x00007fe69afa6000,0x00007fe69b0a7000], sp=0x00007fe69b0a2380, free space=1008k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x1a07297] VMError::report_and_die(int, char const*, char const*, __va_list_tag*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x187
V [libjvm.so+0x1a082ff] VMError::report_and_die(Thread*, void*, char const*, int, char const*, char const*, __va_list_tag*)+0x2f
V [libjvm.so+0xc296ba] report_vm_error(char const*, int, char const*, char const*, ...)+0x12a
V [libjvm.so+0xee0973] GraphKit::add_exception_state(SafePointNode*)+0x303
V [libjvm.so+0xee0ac3] GraphKit::add_exception_states_from(JVMState*)+0x53
V [libjvm.so+0x93911b] PredictedCallGenerator::generate(JVMState*)+0x1bb
V [libjvm.so+0xd3100a] Parse::do_call()+0x50a
V [libjvm.so+0x169fddb] Parse::do_one_bytecode()+0x58b
V [libjvm.so+0x169085a] Parse::do_one_block()+0x39a
V [libjvm.so+0x16913d5] Parse::do_all_blocks()+0x1a5
V [libjvm.so+0x1694afa] Parse::Parse(JVMState*, ciMethod*, float)+0xd0a
V [libjvm.so+0x933fbc] ParseGenerator::generate(JVMState*)+0x1fc
V [libjvm.so+0x9390fd] PredictedCallGenerator::generate(JVMState*)+0x19d
V [libjvm.so+0xd3100a] Parse::do_call()+0x50a
V [libjvm.so+0x169fddb] Parse::do_one_bytecode()+0x58b
V [libjvm.so+0x169085a] Parse::do_one_block()+0x39a
V [libjvm.so+0x16913d5] Parse::do_all_blocks()+0x1a5
V [libjvm.so+0x1694afa] Parse::Parse(JVMState*, ciMethod*, float)+0xd0a
V [libjvm.so+0x933fbc] ParseGenerator::generate(JVMState*)+0x1fc
V [libjvm.so+0x9390fd] PredictedCallGenerator::generate(JVMState*)+0x19d
V [libjvm.so+0xd3100a] Parse::do_call()+0x50a
V [libjvm.so+0x169fddb] Parse::do_one_bytecode()+0x58b
V [libjvm.so+0x169085a] Parse::do_one_block()+0x39a
V [libjvm.so+0x16913d5] Parse::do_all_blocks()+0x1a5
V [libjvm.so+0x1694afa] Parse::Parse(JVMState*, ciMethod*, float)+0xd0a
V [libjvm.so+0x933fbc] ParseGenerator::generate(JVMState*)+0x1fc
V [libjvm.so+0xd3100a] Parse::do_call()+0x50a
V [libjvm.so+0x169fddb] Parse::do_one_bytecode()+0x58b
V [libjvm.so+0x169085a] Parse::do_one_block()+0x39a
V [libjvm.so+0x16913d5] Parse::do_all_blocks()+0x1a5
V [libjvm.so+0x1694afa] Parse::Parse(JVMState*, ciMethod*, float)+0xd0a
V [libjvm.so+0x933fbc] ParseGenerator::generate(JVMState*)+0x1fc
V [libjvm.so+0xb420df] Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool, bool, DirectiveSet*)+0x100f
V [libjvm.so+0x932342] C2Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0x302
V [libjvm.so+0xb4f8e0] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x3c0
V [libjvm.so+0xb505c9] CompileBroker::compiler_thread_loop()+0x269
V [libjvm.so+0x1948867] JavaThread::thread_main_inner()+0x287
V [libjvm.so+0x1948ac1] JavaThread::run()+0x191
- backported by
-
JDK-8227514 C2 compilation fails with "assert(ex_map->jvms()->same_calls_as(_exceptions->jvms())) failed: all collected exceptions must come from the same place"
-
- Resolved
-
-
JDK-8230474 C2 compilation fails with "assert(ex_map->jvms()->same_calls_as(_exceptions->jvms())) failed: all collected exceptions must come from the same place"
-
- Resolved
-
- relates to
-
JDK-8033626 assert(ex_map->jvms()->same_calls_as(_exceptions->jvms())) failed: all collected exceptions must come from the same place
-
- Resolved
-