8209833: C2 compilation fails with "assert(ex_map->jvms()->same_calls_as(_exceptions->jvms())) failed: all collected exceptions must come from the same place"

Deoptimize if exception is thrown in _clone intrinsic.

Reviewed-by: kvn