test/hotspot/jtreg/compiler/intrinsics/object/TestClone.java
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2014, 2016, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2014, 2018, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -29,13 +29,50 @@
  * @library /test/lib
  *
  * @run main/othervm -XX:-TieredCompilation -Xbatch
- *      -XX:CompileCommand=compileonly,compiler.intrinsics.object.TestClone::f
+ *      -XX:CompileCommand=compileonly,compiler.intrinsics.object.TestClone::test*
  *      compiler.intrinsics.object.TestClone
  */
 
 package compiler.intrinsics.object;
 
 import jdk.test.lib.Asserts;
+
+abstract class MyAbstract {
+
+    public Object myClone1() throws CloneNotSupportedException {
+        return this.clone();
+    }
+
+    public Object myClone2() throws CloneNotSupportedException {
+        return this.clone();
+    }
+
+    public Object myClone3() throws CloneNotSupportedException {
+        return this.clone();
+    }
+}
+
+class MyClass1 extends MyAbstract {
+    @Override
+    public Object clone() throws CloneNotSupportedException {
+        return super.clone();
+    }
+}
+
+class MyClass2 extends MyAbstract {
+
+}
+
+class MyClass3 extends MyAbstract implements Cloneable {
+    @Override
+    public Object clone() throws CloneNotSupportedException {
+        return super.clone();
+    }
+}
+
+class MyClass4 extends MyAbstract implements Cloneable {
+
+}
 
 public class TestClone implements Cloneable {
     static class A extends TestClone {}
@@ -56,9 +93,36 @@ public class TestClone implements Cloneable {
     }
     static TestClone a = new A(), b = new B(), c = new C(), d = new D();
 
-    public static Object f(TestClone o) throws CloneNotSupportedException {
+    public static Object test1(TestClone o) throws CloneNotSupportedException {
         // Polymorphic call site: >90% Object::clone / <10% other methods
         return o.clone();
+    }
+
+    public static void test2(MyAbstract obj, boolean shouldThrow) throws Exception {
+       try {
+            obj.myClone1();
+        } catch (Exception e) {
+            return; // Expected
+        }
+        Asserts.assertFalse(shouldThrow, "No exception thrown");
+    }
+
+    public static void test3(MyAbstract obj, boolean shouldThrow) throws Exception {
+       try {
+            obj.myClone2();
+        } catch (Exception e) {
+            return; // Expected
+        }
+        Asserts.assertFalse(shouldThrow, "No exception thrown");
+    }
+
+    public static void test4(MyAbstract obj, boolean shouldThrow) throws Exception {
+       try {
+            obj.myClone3();
+        } catch (Exception e) {
+            return; // Expected
+        }
+        Asserts.assertFalse(shouldThrow, "No exception thrown");
     }
 
     public static void main(String[] args) throws Exception {
@@ -67,18 +131,32 @@ public class TestClone implements Cloneable {
                                a, a, a, a, a, a, a, a, a, a, a,
                                b, c, d};
 
+        MyClass1 obj1 = new MyClass1();
+        MyClass2 obj2 = new MyClass2();
+        MyClass3 obj3 = new MyClass3();
+        MyClass4 obj4 = new MyClass4();
+
         for (int i = 0; i < 15000; i++) {
-            f(params1[i % params1.length]);
+            test1(params1[i % params1.length]);
+
+            test2(obj1, true);
+            test2(obj2, true);
+
+            test3(obj3, false);
+            test3(obj2, true);
+
+            test4(obj3, false);
+            test4(obj4, false);
         }
 
-        Asserts.assertTrue(f(a) != a);
-        Asserts.assertTrue(f(b) == b);
-        Asserts.assertTrue(f(c) == c);
-        Asserts.assertTrue(f(d) == d);
+        Asserts.assertTrue(test1(a) != a);
+        Asserts.assertTrue(test1(b) == b);
+        Asserts.assertTrue(test1(c) == c);
+        Asserts.assertTrue(test1(d) == d);
 
         try {
-            f(null);
-            throw new AssertionError("");
+            test1(null);
+            throw new AssertionError("No exception thrown");
         } catch (NullPointerException e) { /* expected */ }
 
         System.out.println("TEST PASSED");
